--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -1,3 +1,47 @@
-// Place all the styles related to the manuals controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.one_share {
+  font-weight: bold;
+  font-size: 30px;
+  padding-left: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.light-header{
+  padding-right: 10px;
+}
+.site-header {
+  height: 50px;
+  background-color: #def7ff;
+  font-size: 20px;
+}
+.login-new{
+  font-size: 20px;
+}
+
+.manual-body{
+display: flex;
+}
+
+.manual-side{
+  height: 500px;
+  width: 200px;
+  background-color: rgba(199, 219, 223, 0.842);
+}
+
+.manual-side-menu{
+  font-size: 20px;
+}
+
+.manual-list{
+  font-size: 20px;
+  height: 500px;
+  width: 100%;
+  background-color: rgb(233, 180, 209);
+}
+
+.container {
+  margin: 20px 0;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
+  background-color: white;
+  box-sizing: border-box;
+}
