マニュアル保存

--- a/app/views/manuals/index.html.erb
+++ b/app/views/manuals/index.html.erb
@@ -28,7 +28,7 @@
           一覧
         </span>
 
-          <% @manuals.each do |manual| %>%
+          <% @manuals.each do |manual| %>
 
             <div class="question-top">
               質問
