新規・ログイン画面_位置・色修正

--- a/app/views/manuals/index.html.erb
+++ b/app/views/manuals/index.html.erb
@@ -48,7 +48,7 @@
   
     <% else %> 
       <div class="main-menu">
-        <div class="haiti">
+        <div class="main-center">
             <div class="login-in">
               <%= link_to "ログイン", user_session_path, class: "post" %><br>
             </div>
