--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -1,10 +1,29 @@
 .one_share {
+  border-bottom:solid;
+  border-color: white;
   font-weight: bold;
   font-size: 30px;
   padding-left: 10px;
-  display: flex;
-  justify-content: space-between;
+
 }
+  .main-menu {
+    padding-top: 130px;
+    padding-bottom: 60px;
+    height: 500px;
+    background-color: #def7ff;
+    
+}
+.main-center{
+  padding-top: 110px;
+  margin: auto;
+  border:solid;
+  border-color: white;
+  height: 190px;
+  width: 170px;
+  background-color: #def7ff;
+  text-align: center;
+}
+
 .light-header{
   padding-right: 10px;
 }
