--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,20 @@
 <%= render "devise/shared/header" %>
 
-<h2>新規登録</h2>
+<div class="new-sessions-menu">
 
+<div class="new-sessions-menu-name">新規登録</div>
+
+<div class="new-sessions-center">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :メールアドレス %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
@@ -19,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード　再確認用 %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
@@ -47,5 +50,6 @@
     <%= f.submit "新規登録" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+ </div>
+</div>
+<%= render "devise/shared/footer" %>
