--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -1,12 +1,3 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>
-    <link rel="stylesheet" href="style.css">
-    </title>
-  </head>
-  <body>
   <%= render "devise/shared/header" %>
 
     <div class="main">
@@ -18,43 +9,35 @@
           メニュー
         </div>
         <div class="manual-a">
-          マニュアル一覧
-        </div>
-          <li>ポイントカード</li>
-          <li>アプリ</li>
-          <li>キャンペーン</li>
-        <div class="manual-a">
-
-        </div><br>
-
-        <div class="manual-a">
           QA一覧
-        </div>
-          <li><%= link_to "ポイントカード", qas_path, class: "post" %></li>
-          <li>アプリ</li>
-          <li>キャンペーン</li>
-        <div class="manual-a"><br>
+        </div><br>
+          
+        <div class="manual-a">
         <%= link_to "お知らせ追加", new_manual_path, class: "post" %>
         </div>
         <%= link_to "QA追加", new_qa_path, class: "post" %>
-
       </div>
 
       <div class="manual-list">
         <span class="manual-list-menu">
-          お知らせ
-        </span>
+          ポイントカードについてのQA<br>
+          ※にここにはプルダウンで、各項目を選択できるようにする。
+          
+        </span><br><br>
           <div class="notice-top">
-            <% @manuals.each do |manual| %>
+            <% @qas.each do |qa| %>
                   <div class="notice-side-one">
                     日時
                       <div class="notice-main-one">
-                        <%= manual.created_at.strftime('%Y/%m/%d %H:%M') %><br>
+                        <%= qa.created_at.strftime('%Y/%m/%d %H:%M') %><br>
                       </div>
                     <div class="notice-main-two">
-                        <%= manual.notice %>
+                        <%= qa.type_qa %><br>
+                        質問
+                        <%= qa.question %><br>
+                        回答
+                        <%= qa.answer %>
                     </div>
-                     <%= link_to "QAへ", qas_path, class: "post" %>
                   </div>
                 </div>
             <% end %>
@@ -76,6 +59,6 @@
     <% end %>
 
     </div>
+
   </body>
-  <%= render "devise/shared/footer" %>
 </html>
