--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
     </div>
 
      <div class="field">
-      <label class="form-text">お名前カナ(全角)</label><br />
+      <label class="form-text">店舗名・部署名</label><br />
       <%= f.text_area :affiliation, placeholder:"例)店舗名・部署名" %>
     </div><br />
 
