アクティブハッシュ修正

--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -51,6 +51,9 @@
                       <div class="notice-main-one">
                         <%= notice.created_at.strftime('%Y/%m/%d %H:%M') %><br>
                       </div>
+                     <div class="notice-main-two">
+                        <%= notice.type_qa.name %>
+                    </div>
                     <div class="notice-main-two">
                         <%= notice.subject %>
                     </div>
