--- a/app/views/manuals/new.html.erb
+++ b/app/views/manuals/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: @manual, local: true do |f|%>
 
-<%= f.text_area :type_qa, placeholder:"例) カテゴリ" %><br>
+<%= f.text_area :genre, placeholder:"例) カテゴリ" %><br>
 
 <%= f.text_area :subject, placeholder:"例) 件名" %><br>
 
