--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -4,7 +4,7 @@
 
 <%# <%= f.text_area :type_qa, placeholder:"例) カテゴリ" %>
 
-<%= f.collection_select(:type_qa_id, Genre.all, :id, :name, {}) %><br><br>
+<%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br><br>
 
 <%= f.text_area :subject, placeholder:"例) 件名" %><br>
 
