--- a/app/views/qas/new.html.erb
+++ b/app/views/qas/new.html.erb
@@ -1,8 +1,9 @@
 <%= render "devise/shared/header" %>
 
 <%= form_with model: @qa, local: true do |f|%>
-
-<%= f.text_area :type_qa, placeholder:"例) ポイントカードについて" %><br>
+<%= "Q&Aを追加" %><br>
+<%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br><br>
+<%= f.text_area :subject, placeholder:"例) 件名" %><br>
 <%= f.text_area :question, placeholder:"例) 質問" %><br>
 <%= f.text_area :answer, placeholder:"例) 回答" %><br>
 <%= f.submit "保存する", class: :form__btn %>
