--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -38,7 +38,7 @@
                                 <%= qa.genre.name %>
                               </div>
                               <div class="notice-main-two">
-                                <%= link_to qa.subject, qa_path(:id), class: "get" %>
+                                <%= link_to qa.subject, qa_path(qa.id), class: "get" %>
                               </div>
                               </div>
                               </div>
