--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -101,16 +101,23 @@ height: 100vh;
   border-right:solid;
   border-color: rgb(142, 199, 246);
 }
-
 .manual-side-menu{
   font-size: 20px;
 }
+
 
 .manual-list{
   font-size: 20px;
   height: 100vh;
   width: 100%;
   background-color: #def7ff;
+}
+.notice-header-list{
+  display: flex;
+}
+
+.manual-list-menu{
+ margin-right: 20px;
 }
 
 .container {
@@ -146,4 +153,39 @@ height: 100vh;
   height: 50px;
   background-color: #def7ff;
   font-size: 20px;
+}
+
+//notice SHOW画面
+.notices-main{
+  background-color: #def7ff;
+  
+}
+.notices-sub{
+  border:solid;
+  border-color: rgb(142, 199, 246);
+
+  display: flex;
+}
+.notices-subjects{
+padding-top: 10px;
+padding-bottom: 10px;
+
+}
+.notice-main-two{
+font-size: 15px;
+padding-left: 20px;
+padding-top: 10px;
+padding-bottom: 10px;
+
+}
+
+.notice-main-three{
+  font-size: 15px;
+  height: 400px;
+  border:solid;
+  border-color: rgb(142, 199, 246);
+  }
+  
+  .notice-text{
+    margin-top: 20px;
 }
