--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -8,14 +8,14 @@
             <div class="notices-subjects">
             件名
             </div>
-              <div class="notice-main-two">
+              <div class="notice-show-two">
                 <%= notice.subject %>
               </div>
           </div>
                   <div class="notice-text">
                   本文
                   </div>
-              <div class="notice-main-three">
+              <div class="notice-show-three">
                 <%= notice.notice %>
               </div>
 
