--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -1,14 +1,14 @@
 <%= render "devise/shared/header" %>
 
+<div class="notices-main">
 <%= form_with(model: @notice, local: true) do |f|%>
 
-<%# <%= f.text_area :type_qa, placeholder:"例) カテゴリ" %>
+<%= f.collection_select(:genre_id, Genre.all, :id, :name, {},) %><br><br>
 
-<%= f.collection_select(:genre_id, Genre.all, :id, :name, {}) %><br><br>
+<%= f.text_area :subject, placeholder:"例) 件名", size: "40x2" %><br>
 
-<%= f.text_area :subject, placeholder:"例) 件名" %><br>
-
-<%= f.text_area :notice, placeholder:"例) 内容" %><br>
+<%= f.text_area :notice, placeholder:"例) 内容", size: "40x20" %><br>
 <%= f.submit "保存する", class: :form__btn %>
-
+</div>
 <% end %>
+<%= render "devise/shared/footer" %>
