show_cssファイル修正

--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -163,7 +163,7 @@ height: 100vh;
 //notice SHOW画面
 .notices-main{
   background-color: #def7ff;
-  
+  height: 100vh;
 }
 .notices-sub{
   border:solid;
