--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "devise/shared/header" %>
 
 <div class="notices-main">
-  <%= "Q&Aテスト" %>
+  <%= "お知らせテスト" %>
   <% @notices.each do |notice| %>
   <div class="notices">
           <div class="notices-sub">
