--- a/app/views/qas/show.html.erb
+++ b/app/views/qas/show.html.erb
@@ -1,5 +1,6 @@
 <%= render "devise/shared/header" %>
 
+<div class="notices-main">
 <%= "Q&Aテスト" %>
 <% @qas.each do |qa| %>
   <div class="notice-main-two">
@@ -9,5 +10,5 @@
     <%= qa.answer %>
   </div>
 <% end %>
-
+</div>
 <%= render "devise/shared/footer" %>
