--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -162,31 +162,39 @@ height: 100vh;
 
 //notice SHOW画面
 .notices-main{
+  padding-left: 10px;
   background-color: #def7ff;
   height: 100vh;
 }
 .notices-sub{
-  border:solid;
+  margin-right: 10px;
+  background-color: white;
+  border:solid 1px;
   border-color: rgb(142, 199, 246);
   display: flex;
 }
 
 .notices-subjects{
-padding-top: 10px;
-padding-bottom: 10px;
+padding-top: 5px;
 }
 .notice-show-two{
   font-size: 15px;
-  padding-left: 20px;
+  margin-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-right: 15px;
 }
 
 .notice-show-three{
   font-size: 15px;
-  height: 400px;
-  border:solid;
+  margin-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+  height: 300px;
+  background-color: white;
+  border:solid 1px;
   border-color: rgb(142, 199, 246);
   }
  .notice-main-out{
