--- a/app/views/qas/show.html.erb
+++ b/app/views/qas/show.html.erb
@@ -17,8 +17,19 @@
               </div>
               <div class="notice-show-three">
                 <%= qa.answer %>
-              </div>
+              </div><br>
+              
     <% end %>
+          <%# <%= form_with(model: [@qa, @message],local: true) do |f|%>
+           <%#    <div class="field">
+              <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
+         <%#        <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
+       <%#        </div>
+            <div class="actions">
+              <%= f.submit "送信する", class: :form__btn  %>
+      <%#         </div>
+          <% end %> %>
     </div>
 </div>
+
 <%= render "devise/shared/footer" %>
