--- a/app/views/qas/show.html.erb
+++ b/app/views/qas/show.html.erb
@@ -18,17 +18,16 @@
               <div class="notice-show-three">
                 <%= qa.answer %>
               </div><br>
-              
-    <% end %>
-          <%# <%= form_with(model: [@qa, @message],local: true) do |f|%>
-           <%#    <div class="field">
+        <% end %>
+
+          <%= form_with(model: [@qa, @message],local: true) do |f|%>
+              <%# <div class="field">
               <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
-         <%#        <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
-       <%#        </div>
-            <div class="actions">
-              <%= f.submit "送信する", class: :form__btn  %>
-      <%#         </div>
-          <% end %> %>
+              <%# <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
+              <%# </div>
+              <div class="actions">
+              </div> %> %>
+          <% end %>
     </div>
 </div>
 
