--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,11 +1,12 @@
 <%= render "devise/shared/header" %>
 <div class="notices-main">
 <%= "追加" %>
-
+<%= form_with model: @qa, local: true do |f| %>
 <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2" %><br>
 
 <%= f.text_area :message, placeholder:"例) 内容", size: "40x20" %><br>
-<%= f.submit "保存する", class: :form__btn %>
+<%= f.submit "保存する" %>
+<% end %>
 </div>
 
 <%= render "devise/shared/footer" %>
