--- a/app/views/qas/index.html.erb
+++ b/app/views/qas/index.html.erb
@@ -61,7 +61,7 @@
           </div>
         <% end %>
     </div>
-          <%= form_with model: [@message] do |f|%>
+          <%= form_with model: @message do |f|%>
               <div class="field">
               <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
               <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
