--- a/app/views/qas/show.html.erb
+++ b/app/views/qas/show.html.erb
@@ -20,7 +20,7 @@
               </div><br>
         <% end %>
 
-          <<%= form_with(model: [@qa, @message],local: true) do |f|%>
+          <<%= form_with(model: [@qa, @message], method: :post) do |f|%>
              <div class="field">
               <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
               <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
