--- a/app/views/qas/show.html.erb
+++ b/app/views/qas/show.html.erb
@@ -19,15 +19,8 @@
                 <%= qa.answer %>
               </div><br>
         <% end %>
+<%= render "messages/new" %>
 
-          <<%= form_with(model: [@qa, @message], method: :post) do |f|%>
-             <div class="field">
-              <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
-              <%= f.text_area :message, placeholder:"例) コメント", size: "40x20"  %><br>
-              </div>
-              <div class="actions">
-              </div>
-          <% end %>
     </div>
 </div>
 
