--- a/app/views/messages/_new.html.erb
+++ b/app/views/messages/_new.html.erb
@@ -1,3 +1,21 @@
+          <% @qa.messages.each do |message| %>
+      <div class="notices">
+              <div class="notices-subjects">
+              質問
+              </div>
+              <div class="notices-sub">
+              <div class="notice-main-two">
+                <%= message.subject %>
+              </div>
+              </div>
+              <div class="notice-text">
+              回答
+              </div>
+              <div class="notice-show-three">
+                <%= message.message %>
+              </div><br>
+        <% end %>
+     
           <%= "追記" %>
           <%= form_with(model: [@qa, @message], method: :post) do |f|%>
              <div class="field">
