コメント表示機能修正

--- a/app/views/messages/_new.html.erb
+++ b/app/views/messages/_new.html.erb
@@ -1,4 +1,5 @@
-          <% @qa.messages.each do |message| %>
+          <% @messages.each do |message| %>
+
       <div class="notices">
               <div class="notices-subjects">
               質問
