--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -193,9 +193,9 @@ padding-top: 5px;
   border:solid 1px;
   border-color: rgb(142, 199, 246);
   }
- .notice-main-out{
-   margin-bottom: 5px;
- }
+.notice-main-out{
+  margin-bottom: 5px;
+}
   
   .notice-text{
     margin-top: 20px;
@@ -205,7 +205,6 @@ padding-top: 5px;
 //qa回答画面
 .message-main{
   background-color: #def7ff;
-  height: 100vh;
 }
 .message-sub{
   margin-right: 10px;
@@ -215,7 +214,7 @@ padding-top: 5px;
   display: flex;
 }
 .message-subjects{
-padding-top: 5px;
+  padding-top: 5px;
 }
 .message-main-two{
   font-size: 15px;
@@ -228,12 +227,17 @@ padding-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 10px;
-  height: 300px;
+  height: 100px;
   background-color: white;
   border:solid 1px;
   border-color: rgb(142, 199, 246);
   }
-  .message-text{
-    margin-top: 20px;
+.message-text{
+  margin-top: 20px;
 }
 
+.message-under-line {
+  padding-top: 5px;
+  border-top:solid 1px;
+  border-color: rgb(142, 199, 246);
+}
