--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -137,6 +137,7 @@ text-align: center;
 }
 
 .notice-main-two{
+  padding-left: 5px;
   font-size: 15px;
   margin-right: 10px;
   margin-top: 3px;
@@ -197,8 +198,8 @@ padding-top: 5px;
   margin-bottom: 5px;
 }
   
-  .notice-text{
-    margin-top: 20px;
+.notice-text{
+  margin-top: 20px;
 }
 
 
@@ -218,6 +219,7 @@ padding-top: 5px;
 }
 .message-main-two{
   font-size: 15px;
+  padding-left: 5px;
   margin-right: 10px;
   margin-top: 3px;
 }
@@ -238,6 +240,13 @@ padding-top: 5px;
 
 .message-under-line {
   padding-top: 5px;
+  border-top:solid 1px;
+  border-color: rgb(142, 199, 246);
+}
+
+.message-comment-main{
+  padding-top: 5px;
+  padding-bottom: 20px;
   border-top:solid 1px;
   border-color: rgb(142, 199, 246);
 }
