--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -19,10 +19,12 @@
    </div> 
   <% end %>
 
-<%= "追記" %>
-<%= form_with(model: [@qa, @message], method: :post) do |f|%>
-          <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
-          <%= f.text_area :message, placeholder:"例) コメンツ", size: "40x20"  %><br>
-          <%= f.submit '送信', class: 'form-submit' %>
-<% end %>
+  <div class="message-comment-main">
+    <%= "追記" %>
+      <%= form_with(model: [@qa, @message], method: :post) do |f|%>
+                <%= f.text_area :subject, placeholder:"例) 件名", size: "40x2"  %><br>
+                <%= f.text_area :message, placeholder:"例) コメンツ", size: "40x20"  %><br>
+                <%= f.submit '送信', class: 'form-submit' %>
+      <% end %>
+  </div>
 </div>
