--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -19,11 +19,9 @@
         </div>
 
         <div class="manual-a">
-          <%= link_to "Q&A一覧", qas_path, class: "post" %>
+          <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
         </div>
-          <li>ポイントカード</li>
-          <li>アプリ</li>
-          <li>キャンペーン</li>
+
         <div class="manual-a"><br>
         <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
