--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -13,19 +13,17 @@
     <% if user_signed_in? %>
     <div class="manual-body">
       
-           <div class="manual-side">
+      <div class="manual-side">
         <div class="manual-side-menu">
           メニュー
         </div>
-
         <div class="manual-a">
           <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
         </div>
-
         <div class="manual-a"><br>
-        <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
+          <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
-        <%= link_to "QA追加", new_qa_path, class: "post" %>
+          <%= link_to "QA追加", new_qa_path, class: "post" %>
       </div>
 
       <div class="manual-list">
@@ -39,25 +37,37 @@
         </div>
 
           <div class="notice-top">
-            <% @notices.each do |notice| %>
-                <div class="notice-side-one">
-                  <div class="notice-main-in">
-                    日時
+          <div class="notice-main-main">
+            <div class="notice-main-in">
+              日時
+            </div>
+            <div class="notice-main-category">
+              カテゴリ
+            </div>
+            <div class="notice-main-contents">
+              内容
+            </div>
+            <div class="notice-main-author">
+              入力者
+            </div>
+          </div>
+              <% @notices.each do |notice| %>
+                  <div class="notice-side-one">
+                    <div class="notice-main-one">
+                      <%= notice.created_at.strftime('%Y/%m/%d %H:%M') %><br>
+                    </div>
+                    <div class="notice-main-two">
+                      <%= notice.genre.name %>
+                    </div>
+                    <div class="notice-main-three">
+                        <%= link_to notice.subject, notice_path(notice.id), class: "post" %>
+                    </div>
+                     <div class="notice-main-force">
+                        <%= notice.user.last_name %>
+                        <%= notice.user.first_name %>
+                    </div>
                   </div>
-                  <div class="notice-main-one">
-                    <%= notice.created_at.strftime('%Y/%m/%d %H:%M') %><br>
-                  </div>
-                  <div class="notice-main-two">
-                    <%= notice.genre.name %>
-                  </div>
-                  <div class="notice-main-three">
-                      <%= link_to notice.subject, notice_path(notice.id), class: "post" %>
-                  </div>
-                  <div class="notice-main-out">
-                    <%= link_to "QAへ", qas_path, class: "post" %>
-                  </div>
-                </div>
-            <% end %>
+              <% end %>
           </div>
         </div>
       </div>
