--- a/app/assets/stylesheets/manuals.scss
+++ b/app/assets/stylesheets/manuals.scss
@@ -114,10 +114,6 @@
   display: flex;
 }
 
-// .manual-list-menu{
-//  margin-right: 20px;
-// }
-
 .container {
   margin: 20px 0;
   padding: 30px;
@@ -125,10 +121,21 @@
   background-color: white;
   box-sizing: border-box;
 }
+
 //お知らせ入力画面
+.notice-main{
+  background-color: #def7ff;
+}
+.notice-body{
+  display: flex;
+}
+.notices-new-main{
+  padding-left: 10px;
+}
 .notice-main-word{
   font-size: 20px;
   padding-top: 5px;
+  padding-left: 5px;
   margin-bottom: 5px;
 }
 
@@ -302,7 +309,7 @@ font-size: 20px;
   margin-right: 10px;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 10px;
+  padding-top: ５px;
   height: 50px;
 
   }
@@ -320,4 +327,18 @@ font-size: 20px;
   padding-bottom: 20px;
   border-top:solid 1px;
   border-color: rgb(142, 199, 246);
+}
+
+.button{
+  font-size: 15px;
+  color: #ffffff; 
+  width: 100px;
+  padding: 10px 0px;
+  border: solid 1px;
+  background    : #6171b6; 
+}
+.button:hover {
+  box-shadow    : none;
+  color         : #000066;
+  background    : #ffffff;
 }
