--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -19,8 +19,8 @@
         </div>
         <div class="manual-a">
           <%= link_to "Q&A一覧へ", qas_path, class: "post" %>
-        </div>
-        <div class="manual-a"><br>
+        </div><br>
+        <div class="manual-a">
           <%= link_to "お知らせ追加", new_notice_path, class: "post" %>
         </div>
           <%= link_to "QA追加", new_qa_path, class: "post" %>
